# automaton

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md  main.pd
patch_editor_abs/: achordion.pd
puredata/: main.pd
puredata/patch_editor_abs/: achordion-help.pd  achordion.pd  clock.pd  kaseta-help.pd  kaseta.pd  scope.pd
src/: lib.rs
src/achordion/: mod.rs
src/instruments/: kaseta.rs  mod.rs
src/instruments/achordion/: mod.rs
src/instruments/achordion/bank/: harsh.rs  mod.rs  perfect.rs  sins.rs  soft.rs
