[package]
name = "automaton"
version = "0.1.0"
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pd-sys = "0.1.0"
field-offset = "0.3"
achordion-lib = { path = "../achordion/lib" }
achordion-bank = { path = "../achordion/bank", features = ["fft"] }
