[package]
name = "automaton"
version = "0.1.0"
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
pd-sys = "0.1.0"
field-offset = "0.3"
rand = "0.8"
# achordion-lib = { path = "../achordion/lib" }
achordion-lib = { git = "https://github.com/zlosynth/achordion", version = "2.2.1" }
# achordion-bank = { path = "../achordion/bank", features = ["fft"] }
achordion-bank = { git = "https://github.com/zlosynth/achordion", version = "2.2.1", features = [
  "fft",
] }
kaseta-dsp = { path = "../kaseta/dsp" }
kaseta-control = { path = "../kaseta/control" }
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
